# gameboy-emulator

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
cfg/: gbemu.conf
inc/: app.h  card.h  cfg.h  cpu.h  exc.hpp  mmu.h  opcodes.hpp
scripts/: gen_ops.py  ops_db.json
src/: CMakeLists.txt  app.cpp  card.cpp  cfg.cpp  cpu.cpp  gbemu.cpp  opcodes.cpp
